<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/initScreen_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/splash_background"
    android:orientation="vertical"
    tools:context=".activities.LoginRegActivity">
...
            android:ems="10"
            android:hint="@string/hintSurname"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txtEmail_logreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="textEmailAddress"
            android:background="@drawable/edit_text_backg"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@."
            android:ems="10"
            android:hint="@string/hintLgnEmail"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="textPassword"
            android:background="@drawable/edit_text_backg"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="10dp" />


        <Button
            android:id="@+id/btnGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/google_blue"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:drawableTint="@color/color_white"
            android:padding="16dp"
            android:text="Login With Google"
            android:textColor="@color/color_white" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/google_red"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:padding="16dp"
            android:text="@string/btnLogin"
...
