...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/color_white"
                    app:srcCompat="@drawable/ic_baseline_settings_24" />

                <TextView
                    android:id="@+id/card_full_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:text="[FULL NAME]"
                    android:textDirection="ltr"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.066"
                    app:layout_constraintStart_toEndOf="@+id/profImage"
                    app:layout_constraintTop_toBottomOf="@+id/btn_edit_prof" />

                <TextView
                    android:id="@+id/card_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/color_white"
                    android:text="[EXAMPLE.EMAIL@GMAIL.COM]"
...
