<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/initScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/splash_background"
    android:orientation="vertical"
    tools:context=".activities.CreateZoomMeetingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/content_layout_backg"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/textView21"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:text="You are about to join a meeting. Would you like to proceed?" />

        <Button
            android:id="@+id/join_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_1"
            android:textColor="@color/color_white"
            android:text="Proceed" />
    </LinearLayout>

</FrameLayout>